--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start:backend": "ts-node src/main.ts",
-    "dev:frontend": "cd frontend && vite"
+    "dev:frontend": "cd frontend && vite",
+    "dev": "concurrently \"npm run start:backend\" \"npm run dev:frontend\""
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^20.11.0",
+    "concurrently": "^8.2.2",
     "typescript": "^5.3.0",
     "vite": "^4.4.0",
     "@types/react": "^18.0.0",
