--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,12 @@
-# Example DATABASE_URL (Postgres)
-# Postgres connection string format:
-# postgresql://USER:PASSWORD@HOST:PORT/DBNAME
-DATABASE_URL=postgresql://postgres:password@localhost:5432/veta_db
+# Backend environment example# Example DATABASE_URL (Postgres)
+
+PORT=3000# Postgres connection string format:
+
+# DATABASE_URL can be added later when choosing the DB layer# postgresql://USER:PASSWORD@HOST:PORT/DBNAME
+
+# DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DBNAMEDATABASE_URL=postgresql://postgres:password@localhost:5432/veta_db
+
+# If using Prisma, set DATABASE_URL accordingly.
+
+# Optional shorthand for database name
+PG_DATABASE=veta_db
